--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/dist/output.css" rel="stylesheet">
+  <link href="output.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="w-full md:w-full">
-    <!-- The First Scetion -->
+    <!-- The Intro Section -->
     <div class="landing w-full pb-[100px] bg-slate-800">
         <div class="md:pl-[100px] md:flex pt-[20px]">
             <img src="img/logo 1.png" class="w-[100px] mx-auto md:ml-[100px]">
@@ -52,6 +52,8 @@
            </div>
     </div>
 
+    <!-- First Section -->
+
     <div class="first-section w-full pb-[100px]">
         <h1 class="md:text-[30px] text-[20px] text-center pt-[40px]">Minimum Living Cost Takes Care Of Everything</h1>
         <div class="justify-between mt-[20px] md:flex lg:ml-[30px]">
@@ -88,6 +90,7 @@
         </div>
     </div>
 
+    <!-- Second Section -->
     <div class="second-section w-full pb-[100px] bg-stone-200">
       <div class="flex justify-between">
         <div class="mt-[40px] ml-[10%]">
@@ -252,7 +255,7 @@
       </div>
     </div>
 
-
+    <!-- Third Section -->
     <div class="third-section w-full pb-[100px]">
         <div class="md:flex pt-[70px] pl-[10%]">
             <div class="grid  grid-cols-1 md:grid-cols-2">
@@ -370,6 +373,7 @@
         </form>
     </div>
 
+    <!-- Fourth Section -->
     <div class="fourth-section  md:flex justify-between pb-[100px] md:pb-[0px] bg-[#F4511E12]">
         <div>
            <div class="flex md:ml-[150px] md:mt-[150px]">
@@ -404,6 +408,7 @@
           </div>
     </div>
 
+    <!-- The Footer Section -->
     <div class="footer pb-[100px]">
         <hr class="bg-orange-500 mx-auto h-[2px] w-[85%] mx-[auto] mt-[120px]">
         <div class="flex">
