--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="output.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+
 </head>
 <body class="w-full md:w-full">
     <!-- The Intro Section -->
-    <div class="landing w-full pb-[100px] bg-slate-800">
+    <div style="background-image: url(img/etienne-beauregard-riverin-B0aCvAVSX8E-unsplash.png);" class="landing w-full pb-[100px] bg-slate-800">
         <div class="md:pl-[100px] md:flex pt-[20px]">
             <img src="img/logo 1.png" class="w-[100px] mx-auto md:ml-[100px]">
             <nav class="flex justify-center md:mx-auto  md:mt-[0px] mt-[20px] text-slate-100 text-[15px]">
